Ajustes no build e no css

--- a/public/Report.css
+++ b/public/Report.css
@@ -39,7 +39,7 @@ html, body, #root {
 
 .report-content.preview .page {
     margin: 0 auto;
-    width: 25cm;
+    width: 21cm;
     padding: 10mm;
     margin-bottom: 0.5cm;
     box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
@@ -47,6 +47,10 @@ html, body, #root {
 
 .page p {
     line-height: normal;
+}
+
+*, ::after, ::before {
+    box-sizing: content-box !important;
 }
 
 .page > header,
